<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/myLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbarWorkerDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey98"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow"
            app:title="@string/detail_info"
            app:titleTextColor="@color/white">


        </androidx.appcompat.widget.Toolbar>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/workerAvatarImageView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="7dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/fio_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workerItemNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textSize="16sp"
            tools:text="Name" />

        <TextView
            android:id="@+id/workerItemLastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textSize="16sp"
            tools:text="Name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/birthday_date_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workerBirthdayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textSize="16sp"
            tools:text="Birthday" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/age_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workerAgeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textSize="16sp"
            tools:text="Name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/speciality_tv"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workerSpecialtyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textSize="16sp"
            tools:text="Name" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>